# ymusic-cleanup

./: .gitignore  Readme.md  __init__.py  driver.py  driver_google.py  driver_xlsx.py  example_google.py  example_xlsx.py  google_helper.py  jupyter.ipynb  liketable.py  main.ipynb  main.py  playbook.ipynb  pyproject.toml  requirements.txt  source.py  source_google.py  source_xlsx.py  table_helper.py  table_xlsx.py  test_google.ipynb  test_google.py  test_xlsx.ipynb  utility.py  ymusic_cleanup.py  ymusic_liketable.py
ymusic_liketable/: __init__.py  liketable.py  source_google.py  source_xlsx.py  table_helper.py
