[tool.poetry]
name="ymusic-liketable"
version = "0.1.0"
description = ""

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
yandex-music = "^2.2.0"
openpyxl = "^3.1.5"
gspread = "^6.2.1"
gspread-formatting = "^1.2.1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
poetry-plugin-export = ">=1.8"